# SeleneDB

./: .dockerignore  .gitignore  Benchmarks.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.gpu  LICENSE-APACHE  README.md  SECURITY.md  cloudbuild.yaml  deny.toml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.replica.yml  docker-compose.yml  selene.cloud.toml  selene.local.toml.example
crates/selene-algorithms/: Cargo.toml
crates/selene-algorithms/benches/: algo_bench.rs
crates/selene-algorithms/src/: catalog.rs  centrality.rs  community.rs  lib.rs  pathfinding.rs  projection.rs  structural.rs
crates/selene-cli/: Cargo.toml
crates/selene-cli/src/: formatters.rs  main.rs
crates/selene-client/: Cargo.toml
crates/selene-client/src/: client.rs  config.rs  error.rs  lib.rs
crates/selene-core/: Cargo.toml
crates/selene-core/src/: changeset.rs  entity.rs  geometry.rs  interner.rs  io.rs  label_set.rs  lib.rs  origin.rs  property_map.rs  schema.rs  trigger.rs  value.rs
crates/selene-gql/: Cargo.toml
crates/selene-gql/benches/: gql_bench.rs
crates/selene-gql/src/: lib.rs  parallel.rs
crates/selene-gql/src/ast/: expr.rs  mod.rs  mutation.rs  pattern.rs  statement.rs
crates/selene-gql/src/parser/: build.rs  build_clause.rs  build_expr.rs  build_match.rs  grammar.pest  mod.rs
crates/selene-gql/src/pattern/: context.rs  expand.rs  factorized_expand.rs  join.rs  mod.rs  scan.rs  varlength.rs  wco.rs
crates/selene-gql/src/pipeline/: mod.rs  stages.rs
crates/selene-gql/src/planner/: mod.rs  plan.rs  wco_rule.rs
crates/selene-gql/src/planner/optimize/: and_splitting.rs  composite_index.rs  constant_folding.rs  expand_filter_pushdown.rs  filter_interleaving.rs  filter_pushdown.rs  in_list.rs  index_order.rs  (+6 more)
crates/selene-gql/src/runtime/: cache.rs  embed.rs  eval.rs  eval_aggregate.rs  eval_arithmetic.rs  eval_helpers.rs  explain.rs  mod.rs  scope.rs  triggers.rs
crates/selene-gql/src/types/: binding.rs  chunk.rs  coercion.rs  column_builder.rs  error.rs  factor.rs  mod.rs  result.rs  selection_vector.rs  trilean.rs  value.rs
crates/selene-gql/tests/: ai_integration.rs  fuzz_execute.proptest-regressions  fuzz_execute.rs  fuzz_parser.proptest-regressions  fuzz_parser.rs  grammar_coverage.rs  spatial_integration.rs
crates/selene-graph/: Cargo.toml
crates/selene-graph/benches/: graph_bench.rs  hnsw_bench.rs
crates/selene-graph/src/: bitset.rs  change_applier.rs  changelog.rs  chunked_vec.rs  csr.rs  edge_statistics.rs  edge_store.rs  error.rs  graph.rs  lib.rs  multi_graph.rs  mutation.rs  mutation_tests.rs  node_store.rs  schema.rs  schema_compat.rs  schema_validate.rs  shared.rs  snapshot.rs  timestamp_column.rs  trigger.rs  typed_index.rs  view_registry.rs
crates/selene-graph/src/algorithms/: containment.rs  mod.rs  path.rs  traversal.rs
crates/selene-graph/src/hnsw/: build.rs  distance.rs  graph.rs  mod.rs  params.rs  quantize.rs  search.rs
crates/selene-graph/tests/: integration.rs  property_tests.rs
crates/selene-packs/: Cargo.toml
crates/selene-packs/packs/: common.toml
crates/selene-packs/src/: compact.rs  lib.rs  loader.rs
crates/selene-persist/: Cargo.toml
crates/selene-persist/benches/: persist_bench.rs
crates/selene-persist/src/: compress.rs  config.rs  error.rs  lib.rs  recovery.rs  snapshot.rs  sync_cursor.rs  wal.rs  wal_reader.rs
crates/selene-rdf/: Cargo.toml
crates/selene-rdf/benches/: rdf_bench.rs
crates/selene-rdf/src/: adapter.rs  export.rs  import.rs  lib.rs  mapping.rs  namespace.rs  observation.rs  ontology.rs  sparql.rs  terms.rs  update.rs
crates/selene-server/: Cargo.toml  openapi.yaml
crates/selene-server/benches/: mcp_tool_bench.rs
crates/selene-server/src/: bootstrap.rs  config.rs  config_sync.rs  history.rs  lib.rs  main.rs  merge_tracker.rs  metrics.rs  mutation_batcher.rs  rdf_service.rs  replica.rs  search.rs  service_registry.rs  stats_subscriber.rs  subscription.rs  sync_push.rs  sync_task.rs  tasks.rs  tls.rs  ts_history.rs  vector_store.rs  version_store.rs  view_state.rs  wal_coalescer.rs
crates/selene-server/src/auth/: credential.rs  engine.rs  handshake.rs  mod.rs  oauth.rs  policies.rs  projection.rs  reserved.rs
crates/selene-server/src/federation/: bloom.rs  config.rs  error.rs  handler.rs  manager.rs  mod.rs  registry.rs
crates/selene-server/src/http/: auth.rs  changelog_event.rs  error.rs  mod.rs  rate_limit.rs  routes.rs  ws.rs
crates/selene-server/src/ops/: api_keys.rs  csv_io.rs  edges.rs  gql.rs  gql_repair.rs  graph_resolver.rs  graph_slice.rs  graph_stats.rs  health.rs  info.rs  mod.rs  nodes.rs  principals.rs  rdf.rs  reactflow.rs  schema.rs  signing_key.rs  tokens.rs  ts.rs
crates/selene-server/src/quic/: handler.rs  listener.rs  mod.rs  snapshot.rs  subscription.rs
crates/selene-server/src/sync/: mod.rs  push.rs  subscribe.rs
crates/selene-server/src/vault/: audit.rs  crypto.rs  error.rs  mod.rs  storage.rs
crates/selene-server/tests/: e2e.rs  federation.rs  http_e2e.rs  mcp.rs  mcp_ai.rs  mcp_crud.rs  ops.rs  ops_extended.rs  replica_integration.rs  sync_subscription.rs
crates/selene-server/tests/support/: mod.rs
crates/selene-testing/: Cargo.toml
crates/selene-testing/src/: bench_profiles.rs  bench_scaling.rs  edges.rs  helpers.rs  lib.rs  nodes.rs  reference_building.rs  synthetic.rs  tls.rs
crates/selene-ts/: Cargo.toml
crates/selene-ts/benches/: ts_bench.rs
crates/selene-ts/src/: calendar.rs  cloud_store_exporter.rs  compact.rs  config.rs  encoding.rs  error.rs  export.rs  flush.rs  hot.rs  hot_drain.rs  lib.rs  parquet_writer.rs  retention.rs  warm.rs
crates/selene-ts/tests/: cloud_export_integration.rs
crates/selene-wire/: Cargo.toml
crates/selene-wire/benches/: wire_bench.rs
crates/selene-wire/src/: codec.rs  datagram.rs  error.rs  flags.rs  frame.rs  io.rs  lib.rs  msg_type.rs  serialize.rs
crates/selene-wire/src/dto/: changelog.rs  entity.rs  error.rs  federation.rs  gql.rs  graph_slice.rs  mod.rs  service.rs  snapshot.rs  sync.rs  ts.rs
(+142 files in other folders)
