[package]
name = "selene-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Core types, schemas, and codec traits for the Selene property graph"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
lasso = { version = "0.7", features = ["multi-threaded"] }
smallvec.workspace = true
smol_str.workspace = true
geo-types = { version = "0.7", default-features = false, features = ["serde", "std"] }
geojson = { version = "1.0", default-features = false, features = ["geo-types"] }

[dev-dependencies]
postcard.workspace = true
selene-testing.workspace = true
