[package]
name = "selene-gql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "ISO GQL (ISO/IEC 39075) query engine for Selene"

[dependencies]
selene-core.workspace = true
selene-graph.workspace = true
selene-ts.workspace = true
selene-algorithms.workspace = true
imbl.workspace = true
pest = "2"
pest_derive = "2"
arrow.workspace = true
roaring.workspace = true
smallvec.workspace = true
smol_str.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon = "1"
unicode-normalization = "0.1"
regex.workspace = true

# Vector embedding (optional, gated by `embed` feature)
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"], optional = true }

# HTTP embedding fallback (always compiled). `tokio` is used only by the HTTP
# provider to call `block_in_place` so the blocking `ureq` call does not
# starve the tokio worker when invoked from an async server context.
ureq = { version = "3", features = ["json"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

[features]
default = ["embed"]
embed = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
metal = ["embed", "candle-core/metal", "candle-nn/metal"]
cuda = ["embed", "candle-core/cuda", "candle-nn/cuda"]

[dev-dependencies]
selene-testing = { workspace = true, features = ["bench"] }
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "gql_bench"
harness = false
