[package]
name = "selene-gql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "ISO GQL (ISO/IEC 39075) query engine for Selene"

[dependencies]
selene-core.workspace = true
selene-graph.workspace = true
selene-ts.workspace = true
selene-algorithms.workspace = true
imbl.workspace = true
pest = "2"
pest_derive = "2"
arrow.workspace = true
roaring.workspace = true
smallvec.workspace = true
smol_str.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon = "1"
unicode-normalization = "0.1"
regex.workspace = true
geo-types = { version = "0.7", default-features = false, features = ["std"] }

[dev-dependencies]
selene-testing = { workspace = true, features = ["bench"] }
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "gql_bench"
harness = false
