[package]
name = "selene-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "In-memory property graph with dense storage, bitmap indexes, and typed indexes"

[dependencies]
selene-core.workspace = true
smol_str.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
ordered-float = "5"
roaring.workspace = true
imbl.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde.workspace = true
postcard.workspace = true
smallvec.workspace = true
rand.workspace = true

[dev-dependencies]
selene-testing = { workspace = true, features = ["bench"] }
criterion = { workspace = true, features = ["async_tokio"] }
proptest.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }

[[bench]]
name = "graph_bench"
harness = false

[[bench]]
name = "hnsw_bench"
harness = false
