[package]
name = "selene-packs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Community-driven schema packs for Selene (Brick, Haystack, common building ontologies)"

[dependencies]
selene-core.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = []

[dev-dependencies]
tempfile.workspace = true
