[package]
name = "selene-rdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "RDF import/export and SPARQL query adapter for Selene"

[dependencies]
selene-core.workspace = true
selene-graph.workspace = true
oxrdf = "0.3.3"
oxttl = "0.2.3"
rustc-hash.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64 = "0.22"

[dependencies.spareval]
version = "0.2.6"

[dependencies.spargebra]
version = "0.4.6"

[dependencies.sparesults]
version = "0.3.3"

[dev-dependencies]
selene-testing = { workspace = true, features = ["bench"] }
criterion.workspace = true

[[bench]]
name = "rdf_bench"
harness = false
