[package]
name = "selene-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Test factories, reference building models, and synthetic topologies"

[dependencies]
selene-core.workspace = true
smol_str.workspace = true
selene-graph.workspace = true
selene-algorithms.workspace = true
selene-gql.workspace = true
tempfile.workspace = true
criterion = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }

[dev-dependencies]

[[bin]]
name = "memory_profile"
path = "src/bin/memory_profile.rs"

[features]
default = []
bench = ["dep:criterion"]
tls = ["dep:rcgen", "dep:rustls", "dep:rustls-pki-types", "dep:quinn"]
