[package]
name = "selene-ts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Multi-tier time-series engine with hot, warm, cold, and cloud tiers"

[dependencies]
selene-core.workspace = true
serde.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
sketches-ddsketch = "0.4"
arrow.workspace = true
parquet = { workspace = true, features = ["zstd"] }
tokio = { workspace = true, features = ["time", "fs"] }
tracing.workspace = true
thiserror.workspace = true
url = "2"
object_store = { version = "0.13", default-features = false, features = ["aws", "gcp", "azure"] }

[dev-dependencies]
selene-testing = { workspace = true, features = ["bench"] }
criterion = { workspace = true, features = ["async_tokio"] }
proptest.workspace = true
tempfile.workspace = true
toml.workspace = true
object_store = "0.13"
tokio = { workspace = true, features = ["full", "test-util"] }

[[bench]]
name = "ts_bench"
harness = false
